# moar-news

./: .dockerignore  Cargo.toml  Dockerfile  README.md  feeds.toml  fly.toml
.github/workflows/: deploy.yml
src/: config.rs  db.rs  fetcher.rs  lib.rs  main.rs  routes.rs
static/: style.css
templates/: feed_items.html  index.html  refresh_button.html
tests/: integration_tests.rs
