[package]
name = "moar-news"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Feed parsing
feed-rs = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
# Testing utilities
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
axum-test = "16"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
serde_urlencoded = "0.7"
